# skywalking-php

./: .asf.yaml  .gitignore  .licenserc.yaml  .rustfmt.toml  Cargo.toml  Makefile  README.md  Vagrantfile  build.rs  config.m4  docker-compose.yml  package.tpl.xml  package.xml  rust-toolchain.toml
.github/workflows/: blank.yml  container.yml  license.yml  package.yml  pecl.yml  rust.yml
dist-material/: LICENSE  LICENSE.tpl  NOTICE
docker/: Dockerfile
docs/: BUILDING.md  CONFIG.md  README.md  menu.yml
docs/en/configuration/: context-injection.md  ini-settings.md  report-log.md  zend-observer.md
docs/en/contribution/: compiling.md  release-agent.md
docs/en/reporter/: kafka-reporter.md  standalone-reporter.md
docs/en/setup/service-agent/php-agent/: README.md  Supported-list.md
scripts/: Cargo.toml  README.md
scripts/src/: main.rs
scripts/src/command/: create_package_xml.rs  mod.rs
src/: channel.rs  component.rs  context.rs  errors.rs  exception_frame.rs  execute.rs  global.rs  lib.rs  log.rs  main.rs  module.rs  request.rs  tag.rs  util.rs  worker.rs
src/plugin/: mod.rs  plugin_amqplib.rs  plugin_curl.rs  plugin_memcache.rs  plugin_memcached.rs  plugin_mongodb.rs  plugin_mysqli.rs  plugin_pdo.rs  plugin_predis.rs  plugin_psr3.rs  plugin_redis.rs  plugin_swoole.rs  style.rs
src/reporter/: mod.rs  reporter_grpc.rs  reporter_kafka.rs
standalone/: Cargo.toml
standalone-skywalking-worker/: Cargo.toml
standalone-skywalking-worker/src/: main.rs
tests/: e2e.rs
tests/common/: mod.rs
tests/conf/: php-fpm.1.conf  php-fpm.2.conf  php.ini
tests/data/: expected_context.yaml
tests/php/: composer.json
tests/php/fpm/: curl-multi.enter.php  curl.enter.php  curl.test.php  guzzle.php  index.php  memcache.php  memcached.php  mongodb.php  monolog.php  mysqli.php  pdo.php  predis.php  rabbitmq.php  redis.fail.php  redis.succ.php
tests/php/swoole/: main.1.php  main.2.php
worker/: Cargo.toml
worker/src/: channel.rs  lib.rs  main.rs
worker/src/reporter/: mod.rs  reporter_grpc.rs  reporter_kafka.rs
