# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    ".",
    "scripts",
]

[package]
name = "skywalking-php"
version = "0.6.0-dev"
authors = ["Apache Software Foundation", "jmjoy <jmjoy@apache.org>", "Yanlong He <heyanlong@apache.org>"]
description = "Apache SkyWalking PHP Agent."
edition = "2021"
rust-version = "1.65"
repository = "https://github.com/apache/skywalking-php"
license = "Apache-2.0"
readme = "README.md"
publish = false

[lib]
name = "skywalking_agent"
crate-type = ["lib", "cdylib"]

[features]
kafka-reporter = ["skywalking/kafka-reporter"]

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
bincode = "1.3.3"
dashmap = "5.5.0"
futures-util = "0.3.28"
hostname = "0.3.1"
libc = "0.2.147"
once_cell = "1.18.0"
phper = "0.12.0"
prost = "0.11.9"
serde_json = { version = "1.0.104", features = ["preserve_order"] }
skywalking = { version = "0.8.0", features = ["management"] }
systemstat = "0.2.3"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.8.3", features = ["tls"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-subscriber = "0.3.17"
url = "2.4.0"

[dev-dependencies]
axum = "0.6.19"
fastcgi-client = "0.9.0"
reqwest = { version = "0.11.18", features = ["trust-dns", "json", "stream"] }

[build-dependencies]
phper-build = "0.12.0"
