# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    ".",
    "scripts",
    "worker",
]

[workspace.package]
version = "1.0.0"
authors = ["Apache Software Foundation", "jmjoy <jmjoy@apache.org>", "Yanlong He <heyanlong@apache.org>"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/apache/skywalking-php"
license = "Apache-2.0"

[workspace.dependencies]
bincode = { version = "2.0.1", features = ["serde"] }

[package]
name = "skywalking-php"
version = { workspace = true }
authors = { workspace = true }
description = "Apache SkyWalking PHP Agent."
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"
publish = false

[lib]
name = "skywalking_agent"
crate-type = ["lib", "cdylib"]

[features]
kafka-reporter = ["skywalking-php-worker/kafka-reporter"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
bincode = { workspace = true }
dashmap = "6.1.0"
futures-util = "0.3.31"
hostname = "0.4.1"
libc = "0.2.171"
once_cell = "1.21.3"
phper = "0.16.0"
prost = "0.13.5"
rdkafka = { version = "0.37.0", optional = true }
skywalking = { version = "0.9.0", features = ["management"] }
skywalking-php-worker = { path = "worker" }
systemstat = "0.2.4"
thiserror = "2.0.12"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.0", features = ["tls-native-roots"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "local-time"] }
url = "2.5.4"

[dev-dependencies]
axum = "0.8.3"
fastcgi-client = "0.9.0"
reqwest = { version = "0.12.15", features = ["trust-dns", "json", "stream"] }

[build-dependencies]
phper-build = "0.15.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(phper_major_version, values("8"))'] }
