# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "skywalking-php-worker"
version = { workspace = true }
authors = { workspace = true }
description = "Apache SkyWalking PHP Worker."
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "README.md"
publish = false

[features]
standalone = ["clap", "clap_lex", "tracing-subscriber"]
kafka-reporter = ["skywalking/kafka-reporter", "rdkafka/sasl"]

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
bincode = "1.3.3"
clap = { version = "=4.3.24", features = ["derive"], optional = true }
clap_lex = { version = "=0.5.0", optional = true }
libc = "0.2.147"
once_cell = "1.18.0"
prost = "0.11.9"
rdkafka = { version = "0.32.2", optional = true }
serde_json = { version = "1.0.104", features = ["preserve_order"] }
skywalking = { version = "0.8.0", features = ["management"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tonic = { version = "0.8.3", features = ["tls", "tls-roots"] }
tracing = { version = "0.1.37", features = ["attributes", "log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"], optional = true }

[[bin]]
name = "skywalking-php-worker"
required-features = ["standalone", "kafka-reporter"]
